Criação do microserviço de Ordem de Seviço em Clean Arch e ajustes do login LocalStorage para SessionStorage